# HexDDD

./: .eslintrc.json  .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  MPL-2.0.txt  README.md  example.env  migrations.json  mypy.ini  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: python-tests.yml  smoke.yml  type-sync.yml
.husky/: pre-commit
.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
apps/backend-api/: .env.example  di.py  main.py  project.json  repository.py  services.py  uow.py
apps/ddd-e2e/: project.json
apps/web-expo/: .env.example  .eslintrc.json  App.tsx  app.json  jest.config.ts  metro.config.js  package.json  project.json  tsconfig.json
apps/web-next/: .env.example  .env.local.example  .eslintrc.json  jest.config.ts  next.config.js  project.json  tsconfig.json
apps/web-remix/: .env.example  jest.config.ts  package.json  project.json  remix.config.js  tsconfig.json  vite.config.js.bak
docker/: docker-compose.supabase.yml  kong.yml
docs/: ADR-hex-react-python.md  PRD-hex-react-python.md  SDS-hex-react-python.md  SUPABASE-DOCKER-AUTH.md  TDD-Plan-hex-react-python.md  TECHSPEC-hex-react-python.md  react-python-hex-migration.md  types-spec.md
docs/workdocs/: CI-Workflows-Resolution-2025-10-07.md  PR-Resolution-Summary-2025-10-07.md
libs/ddd/: collection.json  generators.json  package.json  project.json
static/: environment.js
tests/: conftest.py
tests/ci/: workflow.test.ts
tests/cross/: comment_test_cases.json  (+6 more)
(+97 files in other folders)
