[project]
name = "nx-ddd-hex-plugin-python"
version = "0.1.0"
description = "Local Python utilities for type generation"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7,<3.0",
    "email-validator>=2.1,<3.0",
    "fastapi>=0.111,<0.112",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0,<9.0",
    "mypy>=1.12,<2.0",
]
